# FastAPI-MySQL-Tortoise-Casbin

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  run.py
apps/auth/: __init__.py  model.py  schema.py  view.py
apps/user/: crud.py  model.py  schema.py  view.py
apps/websocket/: __init__.py  manage.py  view.py
auth/: __init__.py  auth.py  auth_casbin.py  casbin_tortoise_adapter.py
config/: .env
core/: __init__.py  db_router.py  middleware.py  model.py  router.py  server.py  settings.py
core/config/: __init__.py  development_config.py  production_config.py  settings.py
utils/: custom_exc.py  logger.py  response_code.py  utils.py  ws_tools.py
